<resources>
    <string name="app_name">relativeLayout</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="distance">Distância</string>
    <string name="total_kilometers">Total de Quilômetos</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kilometers_per_liter">Kms por Litro</string>
    <string name="total_expense">Seu Gasto Total Será de :</string>
    <string name="r_0">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="register">Ainda não é cadatrastrado? Cadastre-se!</string>
    <string name="forgot_your_password">Esqueceu sua senha ?</string>
</resources>