<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08AD7F"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:background="#fff"
        android:hint="@string/email"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:hint="@string/password"
        android:padding="12dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_marginTop="14dp"
        android:backgroundTint="#DADADA"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#08AD7F" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/register"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/image_support"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/baseline_contact_support_24"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/image_support"
        android:gravity="center"
        android:text="@string/forgot_your_password" />


</RelativeLayout>